# arxiv-scout

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/routes/: __init__.py  sessions.py
backend/graph/: __init__.py  analysis.py  checkpoint.py  commands.py  discovery.py  state.py  supervisor.py  survey.py
backend/integrations/: __init__.py  arxiv.py  firecrawl.py  llm.py  semantic_scholar.py
backend/models/: __init__.py  analysis.py  citation.py  discovery.py  enums.py  events.py  papers.py  session.py  survey.py
backend/persistence/: __init__.py  checkpoints.py  cleanup.py  database.py  session_store.py
backend/prompts/: __init__.py  analysis.py  curation.py  search.py  steering.py  survey.py
backend/scripts/: llm_smoke.py
backend/services/: __init__.py  analysis_service.py  artifact_service.py  citation_graph_service.py  discovery_service.py  revision_service.py  session_service.py  stream_service.py  survey_service.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/: site.webmanifest
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/lib/: sse.ts
frontend/src/views/analysis/: AnalysisView.tsx
frontend/src/views/discovery/: DiscoveryView.tsx
frontend/src/views/survey/: SurveyView.tsx
