[project]
name = "arxiv-literature-scout-backend"
version = "0.1.0"
description = "Backend service for the ArXiv Literature Scout project."
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.34",
    "openai>=1.0.0",
    "pydantic-settings>=2.6.1",
    "ruff>=0.15.5",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "graph", "integrations", "models", "persistence", "services"]
